# PortCraft

./: README.md  pyproject.toml  requirements.txt
.cicd/: main.yml
src/: __init__.py  chatgpt.py  client.py  decorators.py  gp.py  graph.py  marcos.py  polling.py  release.py  settings.py  setup.py  utils.py
src/lib/: common.py  transformers.py
src/lib/abstract_tree/: transformers.py
src/models/: __init__.py
src/portcraft/: constants.py  exceptions.py  git_ops.py  main.py  server.py  settings.py
src/portcraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/portcraft/lib/: common.py  display.py  git_utils.py
src/portcraft/lib/abstract_tree/: __init__.py  converters.py  extractors.py  transformers.py
src/portcraft/models/: __init__.py
src/portcraft/module_utils/: basic.py  executers.py
tools/linux_tips/create_desktop_entry/: README.md
