[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portcraft"
description = "A simple CICD tool"
readme = "README.md"
keywords = ["cicd", "automation", "tools"]


classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "src.release.__version__"}
dependencies = {file = "requirements.txt"}


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prtcraft = [
    ".cicd/main.yml"
]
